# conflux

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.locus/: architecture.yaml
crates/conflux-arch-guard/: Cargo.toml
crates/conflux-arch-guard/src/: lib.rs
crates/conflux-arch-guard/tests/: dependency_boundaries.rs
crates/conflux-bevy/: Cargo.toml
crates/conflux-bevy/examples/: regional_settlement_ecology.rs
crates/conflux-bevy/src/: diagnostics.rs  lib.rs  messages.rs  plugin.rs  resources.rs  systems.rs
crates/conflux-bevy/tests/: adapter.rs
crates/conflux-core/: Cargo.toml
crates/conflux-core/src/: actor.rs  aggregate.rs  bridge.rs  event.rs  field.rs  flow.rs  graph.rs  graph_event.rs  lib.rs  lower.rs  model.rs  query.rs  region.rs  scale.rs  unit.rs
crates/conflux-core/src/lower/: actors.rs  aggregates.rs  bridges.rs  dimension.rs  events.rs  fields.rs  flows.rs  graphs.rs  mod.rs  queries.rs  regions.rs  scale.rs  units.rs
crates/conflux-core/tests/: actors.rs  aggregates.rs  bridges.rs  event.rs  fields.rs  flows.rs  graph.rs  lowering.rs  queries.rs  regions.rs  scale.rs  units.rs
crates/conflux-fixtures/: Cargo.toml
crates/conflux-fixtures/examples/: baseline_report.rs  ecology_baseline.rs
crates/conflux-fixtures/src/: lib.rs  scenarios.rs
crates/conflux-fixtures/tests/: scenarios.rs
crates/conflux-ir/: Cargo.toml
crates/conflux-ir/src/: expr.rs  field_expr.rs  graph_expr.rs  lib.rs  query_semantics.rs  sim.rs  types.rs
crates/conflux-kernel/: Cargo.toml
crates/conflux-kernel/src/: actor_execute.rs  actor_extract.rs  actor_ir.rs  actor_report.rs  diagnose.rs  execute.rs  extract.rs  field_execute.rs  field_extract.rs  field_ir.rs  field_report.rs  flow_execute.rs  flow_extract.rs  flow_ir.rs  flow_report.rs  ir.rs  lib.rs  report.rs
crates/conflux-kernel/tests/: actor_kernel.rs  diagnostics.rs  execution.rs  extraction.rs  field_extraction.rs  flow_kernel.rs
crates/conflux-planner/: Cargo.toml
crates/conflux-planner/examples/: optimization_report.rs
crates/conflux-planner/src/: actor_eligibility.rs  aggregate_eligibility.rs  backend.rs  cost.rs  flow_eligibility.rs  fusion.rs  gpu_eligibility.rs  graph_eligibility.rs  index_eligibility.rs  lib.rs  plan.rs  report.rs  transfer.rs
crates/conflux-planner/src/report/: actor.rs  aggregate.rs  core.rs  flow.rs  gpu.rs  graph.rs  index.rs  mod.rs
crates/conflux-planner/tests/: actor_eligibility.rs  aggregate_eligibility.rs  flow_eligibility.rs  graph_eligibility.rs  index_eligibility.rs  planning.rs  transfer.rs
crates/conflux-residency/: Cargo.toml
crates/conflux-residency/examples/: residency_bridge.rs
crates/conflux-residency/src/: lib.rs  map.rs  report.rs  sync.rs
crates/conflux-residency/src/residency_core/: backend.rs  contract.rs  diagnostics.rs  fake_backend.rs  freshness.rs  generation.rs  graph.rs  mod.rs  patch.rs  plan.rs  readback.rs  report.rs  resource.rs  summary.rs  view.rs
crates/conflux-residency/src/residency_core/fake_backend/: selectors.rs
crates/conflux-residency/src/residency_core/graph/: errors.rs  event_ops.rs  patch_ops.rs  view_ops.rs
crates/conflux-residency/tests/: bridge.rs  residency_core.rs
crates/conflux-runtime/: Cargo.toml
crates/conflux-runtime/examples/: equivalence.rs  field_diffusion.rs  kernel_extraction.rs  public_rust_usage.rs  settlement.rs
crates/conflux-runtime/src/: actor_equivalence.rs  actor_exec.rs  aggregate_eval.rs  aggregate_plan.rs  equivalence.rs  eval.rs  exec.rs  field_equivalence.rs  field_exec.rs  flow_equivalence.rs  flow_exec.rs  graph_event_exec.rs  graph_exec.rs  lib.rs  plan.rs  projection_exec.rs  query_exec.rs  report.rs  selection.rs
crates/conflux-runtime/src/report/: actor.rs  flow.rs  gpu.rs  graph.rs  projection.rs  query.rs  rules.rs
crates/conflux-runtime/tests/: actor_exec.rs  actor_movement.rs  actor_query_consumption.rs  aggregate_eval.rs  bridge.rs  equivalence.rs  field_equivalence.rs  field_reference.rs  flow_exec.rs  flow_report.rs  graph_event_exec.rs  graph_exec.rs  projection_bridge.rs  projection_exec.rs  query_exec.rs  reference.rs  selected_execution.rs
crates/conflux-trace/: Cargo.toml
crates/conflux-trace/examples/: profile_guided.rs
crates/conflux-trace/src/: json.rs  lib.rs  recommend.rs  schema.rs
crates/conflux-trace/tests/: artifact.rs  recommend.rs  residency_import.rs
crates/conflux-wgsl/: Cargo.toml
crates/conflux-wgsl/examples/: gpu_equivalence.rs
crates/conflux-wgsl/src/: actor_emit.rs  emit.rs  field_emit.rs  flow_emit.rs  gpu.rs  gpu_equivalence.rs  gpu_field.rs  gpu_query.rs  lib.rs  module.rs  report.rs  wgsl_expr.rs
crates/conflux-wgsl/tests/: actor_emit.rs  emit.rs  field_emit.rs  flow_emit.rs
docs/: ACTOR_GPU_KERNELS.md  ALPHA0_API_AUDIT.md  ALPHA0_OPTIMIZATION_TARGET.md  ALPHA1_OPTIMIZATION_SUMMARY.md  API_STABILITY.md  ARCHITECTURE_SNAPSHOT.md  BACKEND_SELECTION.md  BEVY_ADAPTER_BOUNDARY.md  BEVY_ADAPTER_PHASE0.md  BEVY_ADAPTER_PHASE1_PLAN.md  BOUNDARIES.md  CURRENT_STATE.md  ERROR_POLICY.md  FLOW_GPU_BACKEND.md  GETTING_STARTED.md  GPU_BACKEND_PASS.md  GPU_BATCHING_FUSION_DECISION.md  GPU_MEASUREMENT_ENGINE_PLAN.md  GRAPH_EVENT_GPU_BOUNDARY_DECISION.md  MODULE_AUDIT.md  MVP_LADDER.md  POST_ALPHA_OPTIMIZATION_TARGET.md  PROJECT_BRIEF.md  PUBLISH_POLICY.md  RC_READINESS.md  RELEASE_CHECKLIST.md  RESIDENCY_DEPENDENCY_PROOF.md  RESIDENCY_FOLD_CLOSEOUT.md  RESIDENCY_FOLD_INVENTORY.md  SCENARIOS.md  SELECTED_EXECUTION.md
