[workspace]
members = [
    "crates/conflux-arch-guard",
    "crates/conflux-bevy",
    "crates/conflux-core",
    "crates/conflux-fixtures",
    "crates/conflux-ir",
    "crates/conflux-kernel",
    "crates/conflux-planner",
    "crates/conflux-residency",
    "crates/conflux-runtime",
    "crates/conflux-trace",
    "crates/conflux-wgsl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ztripez/conflux"
rust-version = "1.78"

[workspace.dependencies]
conflux-core = { path = "crates/conflux-core" }
conflux-bevy = { path = "crates/conflux-bevy" }
conflux-fixtures = { path = "crates/conflux-fixtures" }
conflux-ir = { path = "crates/conflux-ir" }
conflux-kernel = { path = "crates/conflux-kernel" }
conflux-planner = { path = "crates/conflux-planner" }
conflux-residency = { path = "crates/conflux-residency" }
conflux-runtime = { path = "crates/conflux-runtime" }
conflux-trace = { path = "crates/conflux-trace" }
conflux-wgsl = { path = "crates/conflux-wgsl" }

thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
