[package]
name = "conflux-core"
version = "0.1.0"
description = "Public model authoring API and the single lowering gate for Conflux."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-ir.workspace = true
thiserror.workspace = true
