[package]
name = "conflux-kernel"
version = "0.1.0"
description = "Bounded numeric kernel IR and CPU kernel executor for Conflux."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-ir.workspace = true
thiserror.workspace = true

[dev-dependencies]
conflux-core.workspace = true
