[package]
name = "conflux-residency"
version = "0.1.0"
description = "Bridge between Conflux numeric resources and the Residency buffer-movement layer."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-ir.workspace = true
conflux-kernel.workspace = true
conflux-wgsl.workspace = true
residency-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
conflux-core.workspace = true
