[package]
name = "conflux-residency"
version = "0.1.0"
description = "Bridge between Conflux numeric resources and the Residency buffer-movement layer."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-ir.workspace = true
conflux-kernel.workspace = true
conflux-runtime.workspace = true
conflux-wgsl.workspace = true
bytemuck = { version = "1.16", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
conflux-core.workspace = true
