[package]
name = "conflux-runtime"
version = "0.1.0"
description = "CPU reference execution, scheduler, reports, and equivalence harness for Conflux."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-core.workspace = true
conflux-ir.workspace = true
conflux-kernel.workspace = true
thiserror.workspace = true
