[package]
name = "conflux-wgsl"
version = "0.1.0"
description = "WGSL compute backend for Conflux bounded numeric kernels (optional wgpu execution)."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
conflux-ir.workspace = true
conflux-kernel.workspace = true
thiserror.workspace = true

# GPU execution is opt-in: the WGSL emitter needs none of this, so default
# builds (and CI) stay free of the wgpu dependency tree.
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", optional = true }

[features]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dev-dependencies]
conflux-core.workspace = true

[[example]]
name = "gpu_equivalence"
required-features = ["gpu"]
